Fixed issue: font size change on mobile rotation

--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ body {
 	font-size: 16px;
 	margin: 0px;
 	padding: 0px calc(var(--padding) + 2px) var(--padding) 0px;
+	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
 	text-size-adjust: 100%;
 
